--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -662,10 +662,12 @@
             user signs up the device with a Google sites account, the site's
             domain will be appended. -->
     <string name="homepage_base" translatable="false">
-        http://www.google.com/m?client=ms-{CID}&amp;source=android-home</string>
+        http://www.android-x86.org/?android</string>
 
     <!-- Bookmarks -->
     <string-array name="bookmarks" translatable="false">
+        <item>Androd-X86 Project</item>
+        <item>http://www.android-x86.org/?android</item>
         <item>Google</item>
         <item>http://www.google.com/</item>
         <item>Picasa</item>
